2016-02-24  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_sampling_sobol.m: Cite the NLopt toolbox in the documentation

	* sampling/stk_sampling_sobol.m: Cite the NLopt toolbox in the
	documentation.

2016-02-23  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_sampling_sobol.m: new function

	* sampling/stk_sampling_sobol.m: New function to generate points
	from a Sobol sequence.
	* sampling/private/stk_sampling_sobol_mex.c: New MEX-file.
	* admin/octpkg/INDEX: Add new function to the INDEX
	* admin/octpkg/Makefile: Add new MEX-file to the Makefile.
	* stk_init.m: Add new MEX-file to the build system.
	* admin/octpkg/patches/remove-buildmex.patch: Refresh patch.
	* admin/octpkg/patches/remove-testprivatemex.patch: Refresh patch.

	stk_param_relik.m: Introduce a 'simple_kriging' flag

	* paramestim/stk_param_relik.m: Introduce a 'simple_kriging' flag
	to clarify the meaning of the tests for q == 0.

	Get rid of the half-baked @stk_ndf class

	* iago/@stk_ndf/fieldnames.m: Deleted
	* iago/@stk_ndf/get.m: Deleted
	* iago/@stk_ndf/set.m: Deleted
	* iago/@stk_ndf/stk_ndf.m: Deleted
	* iago/@stk_ndf/stk_setnoisevariance.m: Deleted
	* iago/@stk_ndf/stk_sprintf.m: Deleted
	* iago/@stk_ndf/subsasgn.m: Deleted
	* iago/@stk_ndf/vertcat.m: Deleted
	* iago/DESIGN-NOTES.md: Remove all references to  stk_ndf
	* iago/stk_optim.m: Idem.
	* iago/utils/stk_optim_addevals.m: Idem.
	* iago/crit/stk_optim_crit_SUR.m: Idem.
	* iago/crit/stk_optim_crit_iago.m: Idem.

	stk_sampcrit_thresholdbasedoptim.m: Add unit tests

	* sampling/@stk_sampcrit_thresholdbasedoptim/stk_sampcrit_thresholdbasedoptim.m:
	Add unit tests for various number of input arguments.

2016-02-23  Tom Assouline  <tom.assouline@supelec.fr>

	stk_sampcrit_thresholdbasedoptim.m: Fix nargin check

	* sampling/@stk_sampcrit_thresholdbasedoptim/stk_sampcrit_thresholdbasedoptim.m:
	Fix nargin check.

2016-02-18  Julien Bect  <julien.bect@centralesupelec.fr>
