@@ -6,6 +6,7 @@
 
 % Copyright Notice
 %
+%    Copyright (C) 2016 CentraleSupelec
 %    Copyright (C) 2013, 2014 SUPELEC
 %
 %    Author:  Julien Bect  <julien.bect@centralesupelec.fr>
@@ -32,20 +33,30 @@
 
 function kreq = stk_kreq_qr (model, xi, xt)
 
-[Kii, Pi] = stk_make_matcov (model, xi);
-[n, r] = size (Pi);
+if nargin == 0
+    
+    kreq = struct ('n', 0, 'r', 0, 'P_scaling', [], ...
+        'LS_Q', [], 'LS_R', [], 'RS', [], 'lambda_mu', []);
 
-% heuristics: scale Pi to (try to) avoid conditioning issues later
-P_scaling = compute_P_scaling (Kii, Pi);
-Pi = bsxfun (@times, Pi, P_scaling);
+else
+    
+    [Kii, Pi] = stk_make_matcov (model, xi);
+    [n, r] = size (Pi);
+    
+    % heuristics: scale Pi to (try to) avoid conditioning issues later
+    P_scaling = compute_P_scaling (Kii, Pi);
+    Pi = bsxfun (@times, Pi, P_scaling);
+    
+    % kriging matrix (left-hand side of the kriging equation)
+    LS = [[Kii, Pi]; [Pi', zeros(r)]];
+    
+    % orthogonal-triangular decomposition
+    [Q, R] = qr (LS);
+    kreq = struct ('n', n, 'r', r, 'P_scaling', P_scaling, ...
+        'LS_Q', Q, 'LS_R', R, 'RS', [], 'lambda_mu', []);
+    
+end
 
-% kriging matrix (left-hand side of the kriging equation)
-LS = [[Kii, Pi]; [Pi', zeros(r)]];
-
-% orthogonal-triangular decomposition
-[Q, R] = qr (LS);
-kreq = struct ('n', n, 'r', r, 'P_scaling', P_scaling, ...
-    'LS_Q', Q, 'LS_R', R, 'RS', [], 'lambda_mu', []);
 kreq = class (kreq, 'stk_kreq_qr');
 
 % prepare the right-hand side of the kriging equation
